fix: 🔧 fix example Site config

--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -1,4 +1,4 @@
-baseURL: http://example.org/
+baseURL: https://skowalak.github.io/bay/
 languageCode: en-us
 title: Bay Hugo Theme
 themesDir: ../..
