--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -26,17 +26,17 @@ params:
       link: "#"
   social:
     - name: Twitter
-      link: http://twitter.com/YourTwitterUsername
+      link: https://twitter.com/YourTwitterUsername
     - name: Facebook
-      link: http://facebook.com/YourFacebookUsername
+      link: https://facebook.com/YourFacebookUsername
     - name: LinkedIn
       link: http://linkedin.com/in/YourLinkedInUsername
     - name: GitHub
-      link: http://github.com/YourGitHubUsername
+      link: https://github.com/YourGitHubUsername
     - name: Dribbble
       link: https://dribbble.com/YourDribbbleUsername
     - name: RSS
-      link: /feed.xml
+      link: feed.xml
   menu:
     - name: Home
       slug: 
